Symlinked readme to notes markdown page on app

--- a/app/assets/markdown/myNotes.md.erb
+++ b/app/assets/markdown/myNotes.md.erb
@@ -1,9 +1,20 @@
-[Markdown: Syntax](http://daringfireball.net/projects/markdown/syntax)
+# A personal website for J. Makis
 
-[For more information on SASS](http://sass-lang.com/)
+This is my first application utilizing rails and ruby. I am teaching myself as I develope my site.
 
-[For more information on boostrap framework](http://getbootstrap.com/components/)
+I've so far included
++ Flickr API calls on my Photography pages
++ Markdown rendering on Notes pages
 
-## To Do
-
-populate pages
+I am utilizing the following references for my rails education:
++ Google-fu
++ [*Ruby on Rails Tutorial*](http://railstutorial.org/) by [Michael Hartl](http://michaelhartl.com/).
++ [*Rails 4 in Action (EAE)*](http://www.manning.com/bigg2/) by Ryan Bigg, Yehuda Katz, and Steve Klabnik
++ [Markdown Syntax](http://daringfireball.net/projects/markdown/syntax#list)
++ [Markdown Cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
++ [SASS Documentation](http://sass-lang.com/)
++ [Bootstrap Documentation](http://getbootstrap.com/components/)
++ [Git Documentation](http://gitref.org/)
++ [Heroku Documentation](https://devcenter.heroku.com/)
++ [Heroku CLI Documentation](https://devcenter.heroku.com/articles/heroku-command)
++ [Bundler Documentation](http://bundler.io/v1.5/rationale.html)
