--- a/app/assets/markdown/herokuNotes.md.erb
+++ b/app/assets/markdown/herokuNotes.md.erb
@@ -8,6 +8,10 @@ To deploy to heroku
 ## Other useful heroku Commands
 
 	heroku rename newName
+  heroku config
+  heroku config:get
+  heroku config:set
+  heroku config:unset
 
 [Heroku Documentation](http://devcenter.heroku.com/)
 
