Updated partials and pages to match new vision ofstyle with the migration to the updated bootstrap gem

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,7 @@
+<div class="container">
 <footer class="footer">
   <small>
-    Updated: 2/27/13
+    Updated: 3/11/14
   </small>
   <nav>
     <ul>
@@ -9,3 +10,4 @@
     </ul>
   </nav>
 </footer>
+</div>
