--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,16 +1,8 @@
 <% provide(:title, 'About') %>
-<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<div>
+<div class="container">
 	<h1>About</h1>
 	<p>My Name is John Makis. I graduated from The University of Texas at Austin with a degree in Chemistry. I really enjoyed the academic atmosphere and the challenges of scientific research. I participated in the Freshman Research Initiative under the guidance of Dr. Keith J. Stevenson in the Nanomaterials for Chemical Catalysis group. I thoroughly enjoyed my time with the group and I am thankful for the amazing opportunities it brought. I later went on to work under Dr. Philip Magnus learning the techniques necessary for natural product synthesis. My experience with the group taught me many valuable skills and I developed a passion for organic synthesis.</p>
 	<p>Most of my work experience has come from research and peer mentoring (similar to teaching assistant). I spent 4 years total working in research groups at UT. I spent my first stint doing quantitative physical chemistry on nanoparticle catalysts. I was able to present my research at a national ACS convention and I co-wrote a manuscript published by J Phys Chem C. My second stint I developed a love for organic synthesis (specifically natural products) and the benchwork associated with it. Working with my hands is a passion of mine and benchwork is where I really feel happy. I also have interned in an office doing filing, data entry, packing and shipping, and any other tasks that needed to be done.</p>
-	<h2>Around the Web</h2>
-	<div class="list-group">
-		<%= link_to "<img src='https://dlc1-s.licdn.com/sites/all/themes/dlc/img/widgets/member_profile_icon.gif' width='23' height='23' alt=''> LinkedIn".html_safe, "http://www.linkedin.com/pub/john-makis/7b/747/783", :target => "_blank", :class => "list-group-item" %>
-		<%= link_to "<img src='https://www.facebookbrand.com/img/assets/asset.f.logo.lg.png' width='23' height='23' alt=''> Facebook".html_safe, "http://www.facebook.com/johnmakis", :target => "_blank", :class => "list-group-item" %>
-		<%= link_to "<img src='https://ssl.gstatic.com/images/icons/gplus-32.png' width='23' height='23' alt=''> Google+".html_safe, "http://plus.google.com/109012814028863368623", :target => "_blank", :class => "list-group-item" %>
-		<%= link_to "<img src='http://l.yimg.com/g/images/goodies/white-small-chiclet.png' width='23' height='23' alt=''> Flickr".html_safe, "http://www.flickr.com/photos/prayden/", :target => "_blank", :class => "list-group-item" %>
-	</div>
 </div>
 
 
