--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,12 +1,19 @@
 <% provide(:title, 'Contact') %>
-<div>
-	<h1>Contact</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<!-- <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
-	<p>Pityful a rethoric question ran over her cheek, then she continued her way. On her way she met a copy.</p>
-	<form id="form">
-		<p><label>Your Name</label><input type="text" /></p>
-		<p><label>Your Email</label><input type="text" /></p>
-		<p><label>Your Message</label><textarea></textarea></p>
-	</form> -->
+<div class="container">
+  <div class="row">
+    <div class"col-md-8">
+    	<h4>Contact</h4>
+    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="col-md-4">
+      <h4>Finding me around the web</h4>
+      <!-- <div class="list-group col-md-6">
+        <%= link_to "<img src='https://dlc1-s.licdn.com/sites/all/themes/dlc/img/widgets/member_profile_icon.gif' width='23' height='23' alt=''> LinkedIn".html_safe, "http://www.linkedin.com/pub/john-makis/7b/747/783", :target => "_blank", :class => "list-group-item" %>
+        <%= link_to "<img src='https://www.facebookbrand.com/img/assets/asset.f.logo.lg.png' width='23' height='23' alt=''> Facebook".html_safe, "http://www.facebook.com/johnmakis", :target => "_blank", :class => "list-group-item" %>
+        <%= link_to "<img src='https://ssl.gstatic.com/images/icons/gplus-32.png' width='23' height='23' alt=''> Google+".html_safe, "http://plus.google.com/109012814028863368623", :target => "_blank", :class => "list-group-item" %>
+        <%= link_to "<img src='http://l.yimg.com/g/images/goodies/white-small-chiclet.png' width='23' height='23' alt=''> Flickr".html_safe, "http://www.flickr.com/photos/prayden/", :target => "_blank", :class => "list-group-item" %>
+        <%= link_to image_tag("GitHub-Mark-32px.png", :size => "23x23", :alt => "GitHub Log", :title => "GitHub") + " GitHub", "https://github.com/EnolEther", :target => "_blank", :class => "list-group-item" %>
+      </div> -->
+    </div>
+  </div>
 </div>
