--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,10 +1,12 @@
 <% provide(:title) %>
-<div class="containter">
+<div class="container">
   <div class="jumbotron">
     <div class="row">
-      <%= image_tag "aPortrait.jpg", {class: "img-responsive; col-md-3"} %>
-      <div class="col-md-9">
-        <h1>I am John Makis</h1>
+      <div class="col-xs-12 col-sm-4 col-md-4">
+        <%= image_tag "aPortrait.jpg", {class: "img-responsive"} %>
+      </div>
+      <div class="col-xs-12 col-sm-8 col-md-8">
+        <h2>I am John Makis</h2>
         <p>I am someone who is insatiably curious, ambitions, a quick learner, open-minded, and thorough. To me, every problem is a puzzle; sometimes pieces are missing but they're still out there. I can recognize the bigger picture but sometimes I set goals that are too ambitious. I love photography and music; I enjoy playing guitar also. Two of my favorite things to do in Austin are going to see live music, especially ACL Fest, and watching races at the Circuit of the Americas.</p>
       </div>
     </div>
