--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,21 @@
-<header>
-	<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-		<div class="navbar-inner">
-			<div class="container">
-				<ul class="nav navbar-nav pull-left">
-					<li><%= link_to "John J. Makis", root_path, id: "logo" %></li>
-				</ul>
-				<ul class="nav navbar-nav pull-right">
-					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "Photography", photography_path %></li>
-					<li><%= link_to "About", about_path %></li>
-					<li><%= link_to "Contact", contact_path %></li>
-				</ul>
-			</div>
+<header class="navbar navbar-static-top navbar-inverse" role="banner">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<%= link_to "John J. Makis", root_path, id: "logo", :class => "navbar-brand" %>
 		</div>
-	</nav>
+		<nav class="navbar-collapse collapse" role="navigation">
+			<ul class="nav navbar-nav navbar-inverse navbar-right">
+				<li><%= link_to "Home", root_path %></li>
+				<li><%= link_to "Photography", photography_path %></li>
+				<li><%= link_to "About", about_path %></li>
+				<li><%= link_to "Contact", contact_path %></li>
+			</ul>
+		</nav>
+	</div>
 </header>
