--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,25 +1,70 @@
-@import "bootstrap";
-
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
+$grayLighter: #f0f0f0;
 $grayLight: #999;
 $grayDarker: #555;
+
+$footerHeight: 50px;
 
 /* universal */
 
 html {
-  overflow-y: scroll;
+  position: relative;
+  min-height: 100%;
+  // margin-bottom: $footerHeight;
 }
 
-// body {
-//   padding: 60px 2em 2em;
+body {
+  margin-bottom: $footerHeight;
+}
+
+// .navbar-nav {
+//   li {
+//     a {
+//       padding-top:5px !important;
+//       padding-bottom:5px !important;
+//     }
+//   }
 // }
 
-// .nav-collapse { padding-top: 1em; }
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding-left: 3em;
+  padding-right: 3em;
+  padding-top: 1em;
+  border-top: 1px solid $grayMediumLight;
+  /* Set the fixed height of the footer here */
+  height: $footerHeight;
+  // background-color: $grayLighter;
+  color: $grayDarker;
+  a {
+    // text-decoration: none;
+    color: $grayLight;
+    &:hover {
+      color: $grayDarker;
+    }
+  }
+  small {
+    float: left;
+    color: $grayLight;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    margin-right: 2em;
+    li {
+      float: left;
+      // margin-left: 2em;
+    }
+  }
+}
 
-section {
-  overflow: auto;
+.container-inside {
+  padding-left: 3em;
+  padding-right: 3em;
 }
 
 textarea {
@@ -35,13 +80,6 @@ textarea {
   margin-right: auto;
 }
 
-// .center {
-//   text-align: center;
-//   h1 {
-//     margin-bottom: 10px;
-//   }
-// }
-
 .list-group-item{
   border: 0;
 }
@@ -53,25 +91,38 @@ textarea {
   height: 100px;
 }
 
-// .row{
-//   float: center;
-// }
-
-// .centered-content{
-//   display: table;
-//   .centered{
-//     display: table-cell;
-//     text-align: center;
-//     vertical-align: center;
-//     float: none;
-//   }
-// }
-
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
+
+#logo {
+  // float: left;
+  margin-right: 10px;
+  font-size: 1.5em;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+  line-height: 1;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  }
+}
+
+/* markdown */
+
+.anchor-space {
+  padding-top: 75px;
+  margin-top: -75px;
+}
+
+/* Stuff no longer used but saved for reference */
+// html {
+//   overflow-y: scroll;
+// }
 
 // h1 {
 //   font-size: 3em;
@@ -94,57 +145,61 @@ h1, h2, h3, h4, h5, h6 {
 //   line-height: 1.7em;
 // }
 
-
-/* header */
-
 // .navbar {
 //   height: 3em;
 // }
 
-#logo {
-  // float: left;
-  // margin-right: 10px;
-  font-size: 1.5em;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  font-weight: bold;
-  line-height: 1;
-  &:hover {
-    color: white;
-    text-decoration: none;
-  }
-}
-
+// body {
+//   padding: 60px 2em 2em;
+// }
 /* footer */
 
-footer {
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid $grayMediumLight;
-  color: $grayLight;
-  a {
-    color: $gray;
-    &:hover {
-      color: $grayDarker;
-    }
-  }
-  small {
-    float: left;
-  }
-  ul {
-    float: right;
-    list-style: none;
-    li {
-      float: left;
-      margin-left: 10px;
-    }
-  }
-}
+// footer {
+//   // margin-top: 45px;
+//   padding-top: 5px;
+//   border-top: 1px solid $grayMediumLight;
+//   // margin: 4em 1em 5em 6em;
+//   color: $grayLight;
+//   a {
+//     color: $grayMediumLight;
+//     &:hover {
+//       color: $grayDarker;
+//     }
+//   }
+//   small {
+//     float: left;
+//   }
+//   // ul {
+//   //   float: right;
+//   //   list-style: none;
+//   //   li {
+//   //     float: left;
+//   //     margin-left: 10px;
+//   //   }
+//   // }
+// }
 
-/* markdown */
+// section {
+//   overflow: auto;
+// }
 
-.anchor-space {
-	padding-top: 75px;
-	margin-top: -75px;
-}
+// .center {
+//   text-align: center;
+//   h1 {
+//     margin-bottom: 10px;
+//   }
+// }
+
+// .row{
+//   float: center;
+// }
+
+// .centered-content{
+//   display: table;
+//   .centered{
+//     display: table-cell;
+//     text-align: center;
+//     vertical-align: center;
+//     float: none;
+//   }
+// }
