--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,12 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
+  
   <body>
     <%= render 'layouts/header' %>
-      
-    <%= yield %>
-
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
