--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-static-top navbar-inverse" role="banner">
-	<div class="container-fluid">
+	<div class="container">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topnav-collapse">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -9,7 +9,7 @@
 			</button>
 			<%= link_to "John J. Makis", root_path, id: "logo", :class => "navbar-brand" %>
 		</div>
-		<nav class="navbar-collapse collapse" role="navigation">
+		<nav class="navbar-collapse collapse" role="navigation" id="topnav-collapse">
 			<ul class="nav navbar-nav navbar-inverse navbar-right">
 				<li><%= link_to "Home", root_path %></li>
 				<li><%= link_to "Photography", photography_path %></li>
