--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,46 @@
-<div class="container">
-<footer class="footer">
-  <small>
-    Updated: 3/11/14
-  </small>
-  <nav>
-    <ul>
-    	<li><%= link_to "Resume", "/Resume_JM_10-0e.pdf" %></li>
+<div id="footer">
+  <div class="container hidden-xs">
+    <div class="row">
+      <div class="col-sm-3"><small>Updated: 3/12/14</small></div>
+      <div class="col-sm-9">
+        <ul class="list-inline">
+          <li><%= link_to "Resume", "/Resume_JM_10-0e.pdf" %></li>
+          <li><%= link_to "Notes",   notes_path %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="container visible-xs">
+    <ul class="list-inline">
+      <li><%= link_to "Resume", "/Resume_JM_10-0e.pdf" %></li>
       <li><%= link_to "Notes",   notes_path %></li>
-    </ul>
-  </nav>
-</footer>
+    </ul>    
+  </div>
 </div>
+
+
+
+<!-- 
+  Sticky footer with a (second) navbar, renders incorrectly 
+-->
+<!-- <div id="footer" class="navbar navbar-fixed-bottom navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button dropup" class="navbar-toggle" data-toggle="collapse" data-target="#footer-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <p class="navbar-brand navText">
+        Updated: 3/12/14
+      </p>
+    </div>
+    <nav class="navbar-collapse show-footer collapse" id="footer-collapse" role="navigation">
+      <ul class="nav navbar-nav navbar-right navbar-default">
+      	<li><%= link_to "Resume", "/Resume_JM_10-0e.pdf" %></li>
+        <li><%= link_to "Notes",   notes_path %></li>
+      </ul>
+    </nav>
+  </div>
+</div> -->
