--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,14 +32,45 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding-left: 3em;
-  padding-right: 3em;
-  padding-top: 1em;
-  border-top: 1px solid $grayMediumLight;
+  // padding-left: 3em;
+  // padding-right: 3em;
   /* Set the fixed height of the footer here */
   height: $footerHeight;
   // background-color: $grayLighter;
   color: $grayDarker;
+  .footerLarge {
+    width: 90%;
+    padding-top: 1em;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 2em;
+    border-top: 1px solid $grayMediumLight;
+    ul {
+      float: right;
+      list-style: none;
+      padding-right: 2em;
+      // margin-right: 2em;
+      li {
+        float: left;
+        margin-left: 2em;
+      }
+    }
+  }
+  .footerSmall{
+    text-align: center;
+    float: clear;
+    width: 94%;
+    padding-top: 1em;
+    margin-left: 3%;
+    margin-right: 3%;
+    padding-left: 2em;
+    border-top: 1px solid $grayMediumLight;
+    ul {
+      display:inline-block;
+      li {
+      }
+    }
+  }
   a {
     // text-decoration: none;
     color: $grayLight;
@@ -51,15 +82,15 @@ body {
     float: left;
     color: $grayLight;
   }
-  ul {
-    float: right;
-    list-style: none;
-    margin-right: 2em;
-    li {
-      float: left;
-      // margin-left: 2em;
-    }
-  }
+  // ul {
+  //   float: right;
+  //   list-style: none;
+  //   margin-right: 2em;
+  //   li {
+  //     float: left;
+  //     // margin-left: 2em;
+  //   }
+  // }
 }
 
 .container-inside {
