--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,20 +1,24 @@
 <div id="footer">
   <div class="container hidden-xs">
-    <div class="row">
-      <div class="col-sm-3"><small>Updated: 3/12/14</small></div>
-      <div class="col-sm-9">
-        <ul class="list-inline">
-          <li><%= link_to "Resume", "/Resume_JM_10-0e.pdf" %></li>
-          <li><%= link_to "Notes",   notes_path %></li>
-        </ul>
+    <div class="footerLarge">
+      <div class="row">
+        <div class="col-sm-3"><small>Updated: 3/12/14</small></div>
+        <div class="col-sm-9">
+          <ul class="list-inline">
+            <li><%= link_to "Resume", "Resume_JM_10-0e.pdf" %></li>
+            <li><%= link_to "Notes",   notes_path %></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
   <div class="container visible-xs">
-    <ul class="list-inline">
-      <li><%= link_to "Resume", "/Resume_JM_10-0e.pdf" %></li>
-      <li><%= link_to "Notes",   notes_path %></li>
-    </ul>    
+    <div class="footerSmall">
+      <ul class="list-inline">
+        <li><%= link_to "Resume (PDF)", "/Resume_JM_10-0e.pdf" %></li>
+        <li><%= link_to "Notes",   notes_path %></li>
+      </ul>
+    </div>
   </div>
 </div>
 
