Organized styles into multiple stylesheets for better readability

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,8 @@
 @import "bootstrap";
 @import "lightbox.css";
 @import "custom.css.scss";
+@import "header.css.scss";
+@import "footer.css.scss";
 @import "static_pages.css.scss";
 @import "markdown_pages.css.scss";
 @import "photography.css.scss";
