--- a/app/assets/stylesheets/photography.css.scss
+++ b/app/assets/stylesheets/photography.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the photography controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.center-block {
+  width: auto;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.thumbnail {
+  padding: .5em;
+  margin: .5em;
+  width: 100px;
+  height: 100px;
+}
