--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container hidden-xs">
     <div class="footerLarge">
       <div class="row">
-        <div class="col-sm-3"><small>Updated: 3/12/14</small></div>
+        <div class="col-sm-3"><small>Updated: 3/15/14</small></div>
         <div class="col-sm-9">
           <ul class="list-inline">
             <li><%= link_to "Resume", "Resume_JM_10-0e.pdf" %></li>
@@ -15,7 +15,7 @@
   <div class="container visible-xs">
     <div class="footerSmall">
       <ul class="list-inline">
-        <li><%= link_to "Resume (PDF)", "/Resume_JM_10-0e.pdf" %></li>
+        <li><%= link_to "Resume (PDF)", "Resume_JM_10-0e.pdf" %></li>
         <li><%= link_to "Notes",   notes_path %></li>
       </ul>
     </div>
