--- a/app/views/photography_pages/photography.html.erb
+++ b/app/views/photography_pages/photography.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Photography') %>
 <h1>Photographs</h1>
 <!-- <div class="well"> -->
-<div class="row center-block">
+<div class="row">
   <% parsePhotoData(@myPhotos).each do |ele| %>
   <%= render partial: 'layouts/photos', :locals=>{:largeURL => ele[:largeURL], :thumbURL => ele[:thumbURL], :title => ele[:title]} %>
   <% end %>
