trying to fix javascript errors on heroku

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-@import "lightbox.css";
+@import "lightbox";
 @import "custom.css.scss";
 @import "header.css.scss";
 @import "footer.css.scss";
