Updated page content

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
       <h2>I am John Makis</h2>
-      <p>I am someone who is insatiably curious, ambitions, a quick learner, open-minded, and thorough. To me, every problem is a puzzle; sometimes pieces are missing but they're still out there. I can recognize the bigger picture but sometimes I set goals that are too ambitious. I love photography and music and I enjoy playing guitar also. Two of my favorite things to do in Austin are going to see live music, especially ACL Fest, and watching races at the Circuit of the Americas.</p>
+      <p>I am someone who is insatiably curious, ambitions, a quick learner, open-minded, and thorough. To me, every problem is a puzzle; sometimes pieces are missing but they're still out there. I can recognize the bigger picture but sometimes I set goals that are too ambitious. I love photography and music and I enjoy playing guitar also. Two of my favorite things to do in Austin are going to see live music, especially ACL Fest, and watching races at the Circuit of the Americas. The goal of the website is to introduce myself to the Rails framework and establish my presence on the internet.</p>
     </div>
   </div>
 </div>
