debugging routing error

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
         <div class="col-sm-3"><small>Copyright 2014</small></div>
         <div class="col-sm-9">
           <ul class="list-inline">
-            <li><%= link_to "Resume", "resume" %></li>
+            <li><%= link_to "Resume", "Resume_JM_rails_11c.pdf" %></li>
             <li><%= link_to "Notes",   notes_path %></li>
           </ul>
         </div>
@@ -15,7 +15,7 @@
   <div class="container visible-xs">
     <div class="footerSmall">
       <ul class="list-inline">
-        <li><%= link_to "Resume (PDF)", "resume" %></li>
+        <li><%= link_to "Resume (PDF)", "Resume_JM_rails_11c.pdf" %></li>
         <li><%= link_to "Notes",   notes_path %></li>
       </ul>
     </div>
@@ -42,7 +42,7 @@
     </div>
     <nav class="navbar-collapse show-footer collapse" id="footer-collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right navbar-default">
-      	<li><%= link_to "Resume", "resume" %></li>
+      	<li><%= link_to "Resume", "Resume_JM_rails_11c.pdf" %></li>
         <li><%= link_to "Notes",   notes_path %></li>
       </ul>
     </nav>
