--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,8 @@
   <div class="container visible-xs">
     <div class="footerSmall">
       <ul class="list-inline">
-        <li><%= link_to "Resume (PDF)", "Resume_JM_rails_11c.pdf" %></li>
+        <!--<li><%= link_to "Resume (PDF)", "Resume_JM_rails_11c.pdf" %></li>-->
+        <!--<li><%= link_to "Resume (PDF)", "resume" %></li>-->
         <li><%= link_to "Notes",   notes_path %></li>
       </ul>
     </div>
