Removing references to rouge

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import "bootstrap";
 @import "lightbox";
-@import "rouge";
+// @import "rouge";
 @import "custom.css.scss";
 @import "header.css.scss";
 @import "footer.css.scss";
