--- a/app/views/layouts/_photos.html.erb
+++ b/app/views/layouts/_photos.html.erb
@@ -1,3 +1,3 @@
 <div class="col-xs-4 col-xs-offset-1 col-sm-2 col-sm-offset-1 col-md-2 col-md-offset-1">
-  <a href=<%= largeURL %> data-lightbox='gallery' class='thumbnail' title= <%= title %>><img src= <%= thumbURL %> alt= <%= title %> ></a>
+  <a href=<%= largeURL %> data-lightbox='gallery' class='thumbnail' title='<%= title %>'><img src=<%= thumbURL %> alt='<%= title %>'></a>
 </div>
