--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
 		<nav class="navbar-collapse collapse" role="navigation" id="topnav-collapse">
 			<ul class="nav navbar-nav navbar-inverse navbar-right">
 				<li><%= link_to "Home", root_path %></li>
-				<li><%= link_to "Photography", photography_path %></li>
+				<li><%= link_to("Photography", photography_path, html_options = {"data-toggle"=>"tooltip", "title"=>"Please be patient while this page loads."}) %></li>
 				<li><%= link_to "About", about_path %></li>
 				<li><%= link_to "Contact", contact_path %></li>
 			</ul>
