--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
   <div class="container visible-xs">
     <div class="footerSmall">
       <ul class="list-inline">
-        <li>2014</li>
+        <li><small>2014</small></li>
         <li><%= link_to "Resume (PDF)", "Resume_JM_rails_11c.pdf" %></li>
         <li><%= link_to "Notes",   notes_path %></li>
       </ul>
