--- a/app/views/photography_pages/photography.html.erb
+++ b/app/views/photography_pages/photography.html.erb
@@ -1,8 +1,16 @@
 <% provide(:title, 'Photography') %>
 <h1>Photographs</h1>
 <!-- <div class="well"> -->
-<div class="row">
-  <% parsePhotoData(@myPhotos).each do |ele| %>
-  <%= render partial: 'layouts/photos', :locals=>{:largeURL => ele[:largeURL], :thumbURL => ele[:thumbURL], :title => ele[:title]} %>
-  <% end %>
+<!-- <div class="row">
+  <%# parsePhotoData(@myPhotos).each do |ele| %>
+  <%#= render partial: 'layouts/photos', :locals=>{:largeURL => ele[:largeURL], :thumbURL => ele[:thumbURL], :title => ele[:title]} %>
+  <%# end %>
 </div>
+ -->
+<% cache do %>
+  <div class="row">
+      <% parsePhotoData(@myPhotos).each do |ele| %>
+      <%= render partial: 'layouts/photos', :locals=>{:largeURL => ele[:largeURL], :thumbURL => ele[:thumbURL], :title => ele[:title]} %>
+      <% end %>
+  </div>
+<% end %>
