Set expiration time for photo fragment cache

--- a/app/views/photography_pages/photography.html.erb
+++ b/app/views/photography_pages/photography.html.erb
@@ -2,7 +2,7 @@
 <h1>Photographs</h1>
 
 </div>
-<% cache do %>
+<% cache(:expires_in => 3.month) do %>
   <div class="row">
       <% parsePhotoData(@myPhotos).each do |ele| %>
       <%= render partial: 'layouts/photos', :locals=>{:largeURL => ele[:largeURL], :thumbURL => ele[:thumbURL], :title => ele[:title]} %>
