--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -9,36 +9,31 @@
   height: $footerHeight;
   color: $grayDarker;
   .footerLarge {
-    width: 90%;
+    width: 98%;
     padding-top: 1em;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
     padding-left: 2em;
+    padding-right: 2em;
     border-top: 1px solid $grayMediumLight;
     ul {
       float: right;
       list-style: none;
-      padding-right: 2em;
       li {
         float: left;
-        margin-left: 2em;
       }
     }
   }
   .footerSmall{
-    text-align: center;
+    text-align: center !important;
     float: clear;
     width: 94%;
     padding-top: 1em;
     margin-left: 3%;
     margin-right: 3%;
     padding-left: 2em;
+    padding-right: 2em;
     border-top: 1px solid $grayMediumLight;
-    ul {
-      display:inline-block;
-      li {
-      }
-    }
   }
   a {
     // text-decoration: none;
@@ -47,8 +42,7 @@
       color: $grayDarker;
     }
   }
-  small {
-    float: left;
+  .txtLight {
     color: $grayLight;
   }
 }
