Renamed resume to remove version number to allow easier updating

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
         <div class="col-sm-3 txtLight">Copyright 2014</div>
         <div class="col-sm-9">
           <ul class="list-inline">
-            <li><%= link_to "Resume", "Resume_JM_rails_11c.pdf" %></li>
+            <li><%= link_to "Resume", "Resume_JM_rails_online.pdf" %></li>
             <li><%= link_to "Notes",   notes_path %></li>
           </ul>
         </div>
@@ -16,7 +16,7 @@
     <div class="footerSmall">
       <ul class="list-inline">
         <li class="txtLight">2014</a></li>
-        <li><%= link_to "Resume (PDF)", "Resume_JM_rails_11c.pdf" %></li>
+        <li><%= link_to "Resume (PDF)", "Resume_JM_online.pdf" %></li>
         <li><%= link_to "Notes",   notes_path %></li>
       </ul>
     </div>
