--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
         <div class="col-sm-3 txtLight">Copyright 2014</div>
         <div class="col-sm-9">
           <ul class="list-inline">
-            <li><%= link_to "Resume", "Resume_JM_rails_online.pdf" %></li>
+            <li><%= link_to "Resume", "Resume_JM_online.pdf" %></li>
             <li><%= link_to "Notes",   notes_path %></li>
           </ul>
         </div>
